ready for depplyment

--- a/index.html
+++ b/index.html
@@ -11,13 +11,13 @@
     
     <link rel="stylesheet" href="css/style.css">
 
-    <title>Bootstrap theme</title>
+    <title>Manish_Katiyar</title>
 </head>
 <body data-bs-spy = "scroll" data-bs-target="#main-nav" id="home">
     <!-- START -->
     <nav class="navbar navbar-expand-sm bg-dark navbar-dark fixed-top" id="#main-nav">
         <div class="container">
-            <a href="index.html" class="navbar-brand">Bootstrap Project1</a>
+            <a href="index.html" class="navbar-brand">Bootstrap-5-Project1</a>
             <button class="navbar-toggler" data-bs-toggle = "collapse" data-bs-target = "#navbarCollapse" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
@@ -254,7 +254,7 @@
         <div class="container">
             <div class="row">
                 <div class="col text-center py-4">
-                    <h3>Looplab</h3>
+                    <h3>Bootstrap-5-Project1</h3>
                     <p>copyright &copy; <span id="year"></span></p>
                     <button class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#contactModal">Contact Us</button>
                 </div>
